--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../src/js/goblin-game/goblin-game.css"/>
-    <link rel="stylesheet" href="../src/js/hammer/hammer.css"/>
+    <!-- <link rel="stylesheet" href="../src/js/goblin-game/goblin-game.css"/>
+    <link rel="stylesheet" href="../src/js/hammer/hammer.css"/> -->
     <title>goblin-game</title>
 </head>
 <body>
@@ -25,6 +25,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="index.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
 </body>
 </html>
